[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/wing-0.png" type="Texture" id=1]
[ext_resource path="res://entities/player.gd" type="Script" id=2]
[ext_resource path="res://entities/position_calc.gd" type="Script" id=3]
[ext_resource path="res://entities/Shafts.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.3924, 27.004 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )

[node name="position_calc" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -35 )
script = ExtResource( 3 )

[node name="wing0" type="Sprite" parent="."]
position = Vector2( -56, 8 )
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="wing1" type="Sprite" parent="."]
position = Vector2( 56, 8 )
scale = Vector2( -8, 8 )
texture = ExtResource( 1 )

[node name="Shaft" parent="." instance=ExtResource( 4 )]

[node name="ShaftCol" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShootTimeout" type="Timer" parent="."]
wait_time = 0.1
[connection signal="timeout" from="ShootTimeout" to="." method="_on_ShootTimeout_timeout"]
